monitoring/kiali/kiali-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: monitoring
spec:
  hosts:
  - "kiali.cloudjet.click"
  gateways:
  - user/cloudjet-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: kiali.monitoring.svc.cluster.local
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kiali-dr
  namespace: monitoring
spec:
  host: kiali.monitoring.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
